fix: hide mouse follow on overflow y

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,6 +1,7 @@
 .app {
   width: 100%;
   display: block;
+  overflow-y: scroll;
 }
 
 .container {
